fix(commerce): resolve 5 deployment bugs — List.getLast, effectiveTier case, FeatureGate createdAt, billingCycle optional, contract draft update